--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,19 @@
+
+
+
 .nav {
 	grid-area: n;
 	background-color: navajowhite;
+	padding: 20px;
 }
 
 .item {
+	text-decoration: none;
 	color: white
+}
+
+.active{
+	text-decoration: none;
+	color: red;
 }
 
