--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,13 +1,15 @@
 
 .nav {
 	grid-area: n;
-	background-color: navajowhite;
+	background-color: rgb(240, 148, 10);
+	
 	padding: 20px;
 	
 }
 
 .item {
 	text-decoration: none;
+	font-size: 20px;
 	color: white;
 	
 }
