--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,27 @@
 
 }
 .header img {
-	width: 40px;
+	width: 50px;
+	height:50px;
+	border-radius: 30px;
 
 }
+
+.loginBlock {
+	float: right;
+	max-width: 100px; 
+    width: 100px;
+
+}
+.loginBlock a{
+	text-align: center;
+	color: white;
+}
+
+.loginBlock img{
+	width: 30px;
+	height:30px;
+	border-radius: 30px;
+}
+
+
