--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -2,11 +2,16 @@
 
 .postImg img {
 	margin: 0 auto;
-	width: 800px;
-	height: 500px;
+	width: 300px;
+	height: 300px;
 	
 }
-
 .descriptionBlock {
 	padding: 10px;
+}
+.descriptionBlock img {
+	margin: 0 auto;
+	width: 300px;
+	height: 300px;
+	
 }
