--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -8,3 +8,11 @@
 .formControl.error span{
 	color: red;
 }
+
+
+.formControlSummaryError {
+	border: 2px solid red;
+	padding: 5px;
+	color: red;
+}
+.formControl	{}
