--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -11,3 +11,18 @@
 .selectedPage {
 	font-weight: bold;
 }
+
+.paginator {
+	margin: 10px
+}
+
+.pageNumber{
+	padding: 2px;
+	border: 1px sollid grey;
+}
+
+
+.pageNumber.selectedPage {
+	font-weight: bold;
+	border-color: black;
+}
